testdata/baselines/reference/compiler/overloadErrorElaboration3.errors.txt
overloadErrorElaboration3.ts(9,13): error TS2769: No overload matches this call.
  Overload 1 of 3, '(x: string): string', gave the following error.
    Argument of type '{ a: number; }' is not assignable to parameter of type 'string'.
  Overload 2 of 3, '(x: number): number', gave the following error.
    Argument of type '{ a: number; }' is not assignable to parameter of type 'number'.
  Overload 3 of 3, '(x: boolean): boolean', gave the following error.
    Argument of type '{ a: number; }' is not assignable to parameter of type 'boolean'.


==== overloadErrorElaboration3.ts (1 errors) ====
    // Three overloads — should show per-overload errors
    function bar(x: string): string;
    function bar(x: number): number;
    function bar(x: boolean): boolean;
    function bar(x: any): any {
        return x;
    }
    
    var y = bar({ a: 1 });
                ~~~~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 3, '(x: string): string', gave the following error.
!!! error TS2769:     Argument of type '{ a: number; }' is not assignable to parameter of type 'string'.
!!! error TS2769:   Overload 2 of 3, '(x: number): number', gave the following error.
!!! error TS2769:     Argument of type '{ a: number; }' is not assignable to parameter of type 'number'.
!!! error TS2769:   Overload 3 of 3, '(x: boolean): boolean', gave the following error.
!!! error TS2769:     Argument of type '{ a: number; }' is not assignable to parameter of type 'boolean'.
!!! related TS2793 overloadErrorElaboration3.ts:5:10: The call would have succeeded against this implementation, but implementation signatures of overloads are not externally visible.
    